--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="weather">
             <img src="Images/weather-icons/clearSky.png" class="weather-icon">
             <h1 class="temp">0°F</h1>
-            <h2 class="city">Enter city</h2>
+            <h2 class="location">Enter city</h2>
             <div class="details">
                 <div class="col">
                     <img src="Images/humidity.png">
