--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" placeholder="Enter City name" spellcheck="false">
+            <input type="text" placeholder="type here" spellcheck="false">
             <button><img src="Images/search-icon.png" alt=""></button>
         </div>
         <div class="weather">
-            <img src="Images/weather-icons/clearSky.png" class="weather-icon">
-            <h1 class="temp">0°F</h1>
+            <div class="main-img">
+                <img src="Images/weather-icons/clearSky.png" class="weather-icon">
+                <div class="loading-animation"></div>
+            </div>
+            <h2 class="temp">0°F</h2>
             <h2 class="location">Enter city</h2>
             <div class="details">
                 <div class="col">
